--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
-VITE_BASE_URL = http://localhost:8800
+# VITE_BASE_URL = http://localhost:8800
+VITE_BASE_URL = https://enormous-mern-backend.onrender.com
 VITE_AUTH_TAIL_URL = /api/auth
 VITE_REGISTER_URL = /register
 VITE_LOGIN_URL = /login
