added modal to the frontend

--- a/client/.env
+++ b/client/.env
@@ -1,8 +1,8 @@
 # VITE_BASE_URL = http://localhost:8800
 VITE_BASE_URL = https://enormous-mern-backend.onrender.com
-VITE_AUTH_TAIL_URL = /api/auth
-VITE_REGISTER_URL = /register
-VITE_LOGIN_URL = /login
+# VITE_AUTH_TAIL_URL = /api/auth
+VITE_REGISTER_URL = /api/auth/register
+VITE_LOGIN_URL = /api/auth/login
 VITE_ADD_TODO_URL = /todos/addTodo
 VITE_EDIT_TODO_URL = /todos/editTodo
 VITE_DELETE_TODO_URL = /todos/deleteTodo
